优化自动化测试脚本，提升脚本执行结果成功率

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
-addopts = -vs --alluredir ./temp --clean-alluredir
+addopts = -vs --reruns 2 --alluredir ./temp --clean-alluredir
 testpaths = ./test_case
-python_files = test_ext*
+python_files = test_*
 python_classes = Test*
-python_functions = test_extsupplier_05*
+python_functions = test*
 markers =
     smoke:maoyan
