--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = -vs --reruns 2 --alluredir ./temp --clean-alluredir
 testpaths = ./test_case
-python_files = test_*
+python_files = *
 python_classes = Test*
 python_functions = test_*
 markers =
