--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 addopts = -vs --reruns 2 --alluredir ./temp --clean-alluredir
 testpaths = ./test_case
-python_files = test*
+python_files = test_*
 python_classes = Test*
-python_functions = test_*
+python_functions = test_not_lg_tips*
 markers =
     smoke:maoyan
