--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,6 @@ addopts = -vs --reruns 2 --alluredir ./temp --clean-alluredir
 testpaths = ./test_case
 python_files = test_*
 python_classes = Test*
-python_functions = test_not_lg_tips*
+python_functions = test*
 markers =
     smoke:maoyan
