添加商户合作资料收集自动化测试脚本，正向场景

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 addopts = -vs --reruns 2 --alluredir ./temp --clean-alluredir
+#addopts = -vs --alluredir ./temp --clean-alluredir
 testpaths = ./test_case
 python_files = test_*
 python_classes = Test*
