添加商户合作资料收集自动化测试脚本

--- a/extract.yml
+++ b/extract.yml
@@ -1,2 +1,3 @@
-busiLiceNo: YYZZ20231206104211
-companyName: 测试企业20231206104211
+busiLiceNo: YYZZ20231212172640
+companyName: 测试企业20231212172640
+identifyPage: http://172.24.100.75:10018/#/certification-login?accessToken=7a8bacc9452ac7321293b61bfff5251f
