--- a/pytest.ini
+++ b/pytest.ini
@@ -2,8 +2,8 @@
 addopts = -vs --reruns 2 --alluredir ./temp --clean-alluredir
 #addopts = -vs --alluredir ./temp --clean-alluredir
 testpaths = ./test_case
-python_files = test_*
+python_files = test*
 python_classes = Test*
-python_functions = test*
+python_functions = test_*
 markers =
     smoke:maoyan
